--- a/iae-ui/app/home/style.css
+++ b/iae-ui/app/home/style.css
@@ -127,14 +127,17 @@
   background-image: linear-gradient(#5b66f9, #05202d);
   color: #fff;
   font-weight: bold;
-  min-height: 30px;
+  height: 30px;
   text-align: center;
-  margin-top: 5px;
-  margin-bottom: 2px;
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  right: 0;
   bottom: 0;
-  clear: both;
+  left: 0;
+}
+
+body {
+  position: relative;
+  min-height: 100%;
 }
 
 #imageslider_container{
