--- a/iae-ui/app/home/style.css
+++ b/iae-ui/app/home/style.css
@@ -123,18 +123,6 @@
   background-position:-23px -24px;
 }
 
-#footer_container {
-  background-image: linear-gradient(#5b66f9, #05202d);
-  color: #fff;
-  font-weight: bold;
-  height: 30px;
-  text-align: center;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
 body {
   position: relative;
   min-height: 100%;
@@ -159,4 +147,53 @@ body {
   height: 350px;
   text-align:justify;
   background-color: #eee;
+}
+
+.footer {
+    height:24px;
+    width: 100%;
+    position: fixed;
+    bottom: 0pt;
+    left: 0pt;
+    background-image: linear-gradient(#5b66f9, #05202d);
+}   
+
+.footer_contents {
+
+    height:24px;
+    width: 1000px;
+    margin:auto;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+}
+
+.lastpanel{
+  margin-bottom: 40px;
+}
+
+.textPanel{
+    font-family: sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+}
+.readMore{
+  float: right;
+  font-weight: bold;
+  background-color: #f2f200;
+  color: #000;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0px 4px 0px #ccdd01;
+  border: solid 1px transparent; 
+}
+
+.panel-heading{
+  background-color: blue;
+  color: #fff;
+  margin-bottom: 5px;
+  padding: 5px 10px;
+  font-size: 10pt;
+  font-weight: bold;
+  text-align: center;
 }
