--- a/iae-ui/app/home/style.css
+++ b/iae-ui/app/home/style.css
@@ -180,12 +180,15 @@ body {
 .readMore{
   float: right;
   font-weight: bold;
-  background-color: #f2f200;
-  color: #000;
+  background-color: #0c3a24;
+  color: #fff;
   border-radius: 5px;
   text-align: center;
-  box-shadow: 0px 4px 0px #ccdd01;
+  box-shadow: 0px 4px 0px #1f8453;
   border: solid 1px transparent; 
+}
+.readMore:hover{
+  color: orange;
 }
 
 .panel-heading{
@@ -196,4 +199,42 @@ body {
   font-size: 10pt;
   font-weight: bold;
   text-align: center;
+}
+
+marquee{
+  max-height:250px !important;
+}
+
+p.marquee-txt{
+  margin:10px;
+  padding:10px;
+  border:1px solid #CCC;
+  border-radius:8px;
+  box-shadow:1px 1px 3px 1px #CCC;
+  font-size: 15px;
+  color: #000;
+}
+
+p.marquee-txt:hover{
+  background-color:#b8bec6;
+}
+span.highlight{
+  font-weight: bold;
+  font-size: 18px;
+}
+.supporterTalk{
+  font-size: 15px;
+  font-style: italic;
+  text-align: justify;
+}
+.supporterTalk > img{
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
+  float: left;
+  margin-right: 10px;
+}
+.supporter{
+  font-size: 17px;
+  font-weight: 700;
 }
