--- a/iae-ui/app/home/style.css
+++ b/iae-ui/app/home/style.css
@@ -209,8 +209,8 @@ marquee{
 }
 
 p.marquee-txt{
-  margin:10px;
-  padding:10px;
+  margin:5px;
+  padding:5px;
   border:1px solid #CCC;
   border-radius:8px;
   box-shadow:1px 1px 3px 1px #CCC;
@@ -224,6 +224,8 @@ p.marquee-txt:hover{
 span.highlight{
   font-weight: bold;
   font-size: 18px;
+  color: midnightblue;
+  text-decoration: underline;
 }
 .supporterTalk{
   font-size: 15px;
