--- a/iae-ui/src/app/home/header.html
+++ b/iae-ui/src/app/home/header.html
@@ -14,7 +14,7 @@
   		</div>
   	</div>
   	<div id="logo">
-    		<img src="app/images/logo.png">
+    		<img src="src/app/images/logo.png">
   	</div>
   	<div id="main_menu">
   		<ul class="menu">
