--- a/iae-ui/src/app/home/maincontainer.html
+++ b/iae-ui/src/app/home/maincontainer.html
@@ -1,5 +1,5 @@
 <div id="main_container">
-	<img src="src/app/images/home.jpg" width="100%" height="350px">
+	<img src="assets/images/home.jpg" width="100%" height="350px">
 	<div class="jumbotron">
 	    	<div class="col-md-4 panel panel-default introduction" style="padding-left: 15px;padding-right: 25px;padding-top: 10px;">
 			<p class="textPanel">
@@ -33,11 +33,11 @@
 		<div class="col-md-4 panel panel-default lastpanel">
 			<h5 class="panel-heading">ANNUAL REPORTS</h5>
 			<div style="margin-top: 10px;margin-left: 10px;">
-				<download displayName="2016 Annual Report" fileName="annual_report.pdf" filePath="src/app/blank.pdf"></download>
-				<download displayName="2015 Annual Report" fileName="annual_report.pdf" filePath="src/app/blank.pdf"></download>
-				<download displayName="2014 Annual Report" fileName="annual_report.pdf" filePath="src/app/blank.pdf"></download>
-				<download displayName="2013 Annual Report" fileName="annual_report.pdf" filePath="src/app/blank.pdf"></download>
-				<download displayName="2012 Annual Report" fileName="annual_report.pdf" filePath="src/app/blank.pdf"></download>
+				<download displayName="2016 Annual Report" fileName="annual_report.pdf" filePath="assets/docs/blank.pdf"></download>
+				<download displayName="2015 Annual Report" fileName="annual_report.pdf" filePath="assets/docs/blank.pdf"></download>
+				<download displayName="2014 Annual Report" fileName="annual_report.pdf" filePath="assets/docs/blank.pdf"></download>
+				<download displayName="2013 Annual Report" fileName="annual_report.pdf" filePath="assets/docs/blank.pdf"></download>
+				<download displayName="2012 Annual Report" fileName="annual_report.pdf" filePath="assets/docs/blank.pdf"></download>
 			</div>
 		</div>
 	</div>
