--- a/iae-ui/src/app/home/style.css
+++ b/iae-ui/src/app/home/style.css
@@ -114,7 +114,7 @@
   margin-left:5px;
   width:20px;
   height:20px;
-  background:url(../images/social_icons.png) no-repeat;
+  /*background:url(./src/assets/images/social_icons.png) no-repeat; */
 }
 #social_icons a.facebook {
   background-position:-23px 0;
